[package]
name = "dfmutex"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Deadlock-free Mutex locks"
repository = "https://github.com/MovAh13h/dfmutex"
documentation = "https://docs.rs/dfmutex"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
